--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdk 31
@@ -85,6 +86,7 @@ dependencies {
     def koin_version = "3.1.5"
     def lifecycle_version = "2.4.1"
     def coroutines_version = "1.6.0"
+    def room_version = "2.4.2"
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -127,6 +129,11 @@ dependencies {
 
     //Koin
     implementation "io.insert-koin:koin-android:$koin_version"
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
 
 }
