--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,5 +145,8 @@ dependencies {
     //Maps
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
 
+    //Location
+    implementation "com.google.android.gms:play-services-location:19.0.1"
+
 
 }
