--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -83,7 +84,8 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.2.0-alpha08"
+        kotlinCompilerVersion '1.6.20'
+        kotlinCompilerExtensionVersion = "1.1.1"
     }
 }
 
@@ -96,6 +98,7 @@ dependencies {
     def lifecycle_version = "2.4.1"
     def coroutines_version = "1.6.0"
     def room_version = "2.4.2"
+    def compose_version = "1.2.0-alpha08"
 
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -156,13 +159,15 @@ dependencies {
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.4.0'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation "androidx.compose.material:material:$compose_version"
     // Animations
-    implementation 'androidx.compose.animation:animation:1.1.1'
+    implementation "androidx.compose.animation:animation:$compose_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+    // Intergration with maps
+    implementation 'com.google.maps.android:maps-compose:2.1.0'
 
 
 }
